29-StokBarang-Tugas/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal
-d
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java
<---- end of javadoc command ---->
Loading source file D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java...
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:66: error: illegal start of type
    if(i==3){
    ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:66: error: <identifier> expected
    if(i==3){
        ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:66: error: ';' expected
    if(i==3){
          ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:66: error: illegal start of type
    if(i==3){
           ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:66: error: <identifier> expected
    if(i==3){
            ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:66: error: ';' expected
    if(i==3){
             ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:67: error: illegal start of type
        pesanServer="Kalah, angka = "+angka;
                   ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:67: error: <identifier> expected
        pesanServer="Kalah, angka = "+angka;
                    ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:67: error: ';' expected
        pesanServer="Kalah, angka = "+angka;
                                     ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:67: error: <identifier> expected
        pesanServer="Kalah, angka = "+angka;
                                           ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:68: error: <identifier> expected
        keluaran = koneksi.getOutputStream();
                ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:69: error: <identifier> expected
        keluaranBuf = new BufferedWriter(new OutputStreamWriter(keluaran)); 
                   ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:70: error: <identifier> expected
        keluaranBuf.write(pesanServer);
                         ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:70: error: <identifier> expected
        keluaranBuf.write(pesanServer);
                                     ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:71: error: <identifier> expected
        keluaranBuf.newLine();
                           ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:72: error: <identifier> expected
        keluaranBuf.flush();
                         ^
D:\Libraries\Documents\Tugas\Komunikasi Data\Struktur Data 2015\29-StokBarang-Test-Awal\Process.java:74: error: class, interface, or enum expected
}
^
17 errors
